--- a/src/app/customers/customers.html
+++ b/src/app/customers/customers.html
@@ -2,7 +2,7 @@
 
 <search></search>
 
-<div class="">
+<section>
     <table class="">
         <thead class="">
             <tr>
@@ -40,6 +40,8 @@
                 <td>{{ customer.invoices }}</td>
             </tr>
             }
+
         </tbody>
     </table>
-</div>
+    <a href="/neu-kunde" class="new-customer">Neuer Kunde Anlegen</a>
+</section>
