--- a/src/app/customers/customers.scss
+++ b/src/app/customers/customers.scss
@@ -1,5 +1,11 @@
 @use "./../../basic";
 
+section {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 table { 
     border-radius: 10px; 
     border-spacing: 0; 
