search function improoved

--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -1,6 +1,6 @@
 <h1 class="title">Algorithmus</h1>
 
-<div class="search-container">
+<search class="search-container">
   <input
     type="text"
     placeholder="Search customers..."
@@ -12,14 +12,14 @@
 
   @if (showDropdown) {
     <ul class="dropdown">
-      @for (customer of customerControl.customers; track customer) {
+      @for (customer of filteredCustomers; track customer) {
         <li (click)="selectCustomer(customer)">
           {{ customer.firstName }} {{ customer.lastName }}
         </li>
       }
     </ul>
   }
-</div>
+</search>
 
 <form [formGroup]="algorithmusForm" (ngSubmit)="onSubmit()">
   <div>
