--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -87,7 +87,7 @@
   </button>
 </form>
 
-<section>
+<section class="summary">
   <h2>
     Zusammenfassung
   </h2>
@@ -163,6 +163,100 @@
 
 </section>
 
-  <button type="submit" [disabled]="!algorithmusForm.valid">
-    Rechnung erstellen
-  </button>
+<button (click)="openDialog()" type="submit" [disabled]="!algorithmusForm.valid">
+  Rechnung erstellen
+</button>
+
+<section [ngClass]="isInvoiceVisible ? 'show-invoice': 'hide-invoice'" (click)="closeDialog()">
+
+  <div class="invoice-container">
+    <header class="invoice-header">
+        <div class="company-info">
+        <h1>{{companyControl.companyName}}</h1>
+        <p>{{companyControl.street}} {{companyControl.number}}<br>{{companyControl.postcode}} {{companyControl.city}} </p>
+        </div>
+        <a href="/" class="logo">
+        <img width="60" height="60" src="./assets/SK-metatag.png" alt="Start in Krypto">
+        </a>
+        <div class="invoice-info">
+        <h2>RECHNUNG</h2>
+        <p>Rechnung Nr.</p>
+        <p>Kundennr.: {{customerNumberInvoice}}</p>
+        <p>Date: {{currentDate | date:'dd.MM.yyyy' }}</p>
+        </div>
+    </header>
+
+    <div class="bill-to">
+        <h3>Rechnung an:</h3>
+        <address>
+        <strong>{{customerNameInvoice}}</strong><br>
+        {{customerStreetInvoice}}<br>
+        {{customerCityInvoice}}
+        </address>
+    </div>
+
+    <table class="invoice-table">
+        <thead>
+        <tr>
+            <th>Service</th>
+            <th>Provison</th>
+            <th>Gebühr</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Grundgebühr</td>
+            <td></td>
+            <td>{{algorithmusControl.basicFeeProvision | number:'1.2-2'}} €</td>
+        </tr>
+        <tr>
+            <td>Individuelle Express Krypto-Einführung</td>
+            <td>{{algorithmusControl.firstStepProvision | number:'1.2-2'}} %</td>
+            <td>{{firstStepAmount | number:'1.2-2' }} €</td>
+        </tr>
+        <tr>
+            <td>Börsenwahl & Einrichtung</td>
+            <td>{{algorithmusControl.exchangeSetupProvision | number:'1.2-2'}} %</td>
+            <td>{{exchangeSetupAmount | number:'1.2-2' }} €</td>
+        </tr> 
+        <tr>
+            <td>Kaufstrategie & Coin-Auswahl</td>
+            <td>{{algorithmusControl.buyStrategyProvision | number:'1.2-2'}} %</td>
+            <td>{{buyStrategyAmount | number:'1.2-2' }} €</td>
+        </tr>
+        <tr>
+            <td>Wallet-Einrichtung & Sicherheit</td>
+            <td>{{algorithmusControl.walletSetupProvision | number:'1.2-2'}} %</td>
+            <td>{{walletSetupAmount | number:'1.2-2' }} €</td>
+        </tr>
+        <tr>
+            <td>Steuertool für deine Abwicklung</td>
+            <td>{{algorithmusControl.taxToolProvision | number:'1.2-2'}} %</td>
+            <td>{{walletSetupAmount | number:'1.2-2' }} €</td>
+        </tr>
+        <tr>
+            <td>Laufende Betreuung</td>
+            <td></td>
+            <td>{{algorithmusControl.ongoingSupportProvision| number:'1.2-2' }} €</td>
+        </tr>
+        </tbody>
+    </table>
+
+    <div class="totals">
+        <p><span>Zwischensumme:</span> <span>{{ investmentAmount| number:'1.2-2' }} €</span></p>
+        <p><span>Provison (6.5%):</span> <span>{{totalProvision| number:'1.2-2' }} €</span></p>
+        <p><span>MwSt. (19%):</span> <span>{{valueAddedTax | number:'1.2-2' }} €</span></p>
+        <h3><span>Total:</span> <span>{{totalAmount | number:'1.2-2' }} €</span></h3>
+    </div>
+
+    <footer>
+        <p>
+        Bitte überweisen Sie den Gesamtbetrag innerhalb von 14 Tagen nach Erhalt dieser Rechnung.
+        Zahlungen können per Banküberweisung oder in Kryptowährung erfolgen.
+        Bei Fragen zu dieser Rechnung kontaktieren Sie uns bitte unter:
+        <a href="mailto:elisabeth@startinkrypto.de">elisabeth@startinkrypto.de</a>.
+        </p>
+        <p> Bankverbindung: {{companyControl.bankAccount}}, USt-Idnr: {{companyControl.taxNumber}}</p>
+    </footer>
+  </div>
+</section>
