--- a/src/app/settings/company/company.scss
+++ b/src/app/settings/company/company.scss
@@ -6,6 +6,8 @@
   background-color: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   border-radius: 0.75rem;
+  transform: translateX(0%);
+  transition: basic.$first-transition;
 }
 
 .container-edit,
@@ -13,7 +15,7 @@
   display: flex;
   flex-direction: column;
   width: 37.5rem;
-  height: 37.5rem;
+  height: 40rem;
   padding: 1.875rem;
   overflow: hidden;
 }
@@ -97,4 +99,13 @@ dt {
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px var(--primary);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px basic.$primary;
+}
+
+.show-edit {
+  transform: translateX(-50%);
+}
+
+.show-scroll {
+    overflow-y: scroll;
+
 }
