--- a/src/app/settings/company/company.scss
+++ b/src/app/settings/company/company.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   width: 37.5rem;
-  height: 40rem;
+  height: 50rem;
   padding: 1.875rem;
   overflow: hidden;
 }
@@ -54,12 +54,20 @@ dt {
   color: basic.$secondary;
 }
 
+
+.bank,
+.bank-account,
+.swift-code,
 .email,
 .founding,
 .tax {
-  margin-top: 1.25rem;
+  margin-top: 0.5rem;
   font-weight: bold;
   color: #555;
+}
+
+.tax {
+  margin-top: 1.25rem;
 }
 
 .form-group {
