Bank name validation works correct

--- a/src/app/settings/company/company.html
+++ b/src/app/settings/company/company.html
@@ -188,7 +188,7 @@
     </div>
 
     <!-- Bank Name -->
-    <!-- <div class="form-group">
+    <div class="form-group">
       <label class="control-label" id="label-bank" for="bank">Bankname:</label>
       <input class="form-control" type="text" placeholder="z. B. N26" id="bank" formControlName="bank"/>
     @if (companyForm.get('bank')?.invalid && (companyForm.get('bank')?.touched || companyForm.get('bank')?.dirty)) {
@@ -201,7 +201,7 @@
       }
     </div>
     } 
-    </div> -->
+    </div>
 
     <!-- Bank Account -->
     <!-- <div class="form-group">
