--- a/src/app/settings/company/company.html
+++ b/src/app/settings/company/company.html
@@ -2,7 +2,7 @@
     <div class="container-firma">
       <div class="logo">
         <a href="/" class="logo">
-          <img width="170" height="40" [src]="companyDetails.companyLogo"  alt="Start in Krypto">
+          <img width="170" height="40" [src]="companyData.companyLogo"  alt="Start in Krypto">
         </a>
       </div>
     <h1>Start in Krypto</h1>
@@ -12,50 +12,50 @@
     <address class="details">
       <dl>
         <dt>Name</dt>
-        <dd>{{companyDetails.companyName}}</dd>
+        <dd>{{companyData.companyName}}</dd>
       </dl>
       <dl>
         <dt>Name des Inhabers</dt>
-        <dd>{{companyDetails.ownerName}}</dd>
+        <dd>{{companyData.ownerName}}</dd>
       </dl>
       <dl>
         <dt>Straße & Nr.</dt>
-        <dd>{{companyDetails.street}} {{companyDetails.number}}</dd>
+        <dd>{{companyData.street}} {{companyData.number}}</dd>
       </dl>
       <dl>
         <dt>Postleitzahl & Stadt</dt>
-        <dd>{{companyDetails.postcode}} {{companyDetails.city}}</dd>
+        <dd>{{companyData.postcode}} {{companyData.city}}</dd>
       </dl>
     </address>
     
     <dl class="tax">
       <dt>Steuernummer</dt>
-      <dd>{{companyDetails.taxNumber}}</dd>
+      <dd>{{companyData.taxNumber}}</dd>
     </dl>
     
     <dl class="bank">
       <dt>Bankname:</dt>
-      <dd>{{companyDetails.bank}}</dd>
+      <dd>{{companyData.bank}}</dd>
     </dl>
 
     <dl class="bank-account">
       <dt>IBAN / Kontonummer:</dt>
-      <dd>{{companyDetails.bankAccount}}</dd>
+      <dd>{{companyData.bankAccount}}</dd>
     </dl>
 
     <dl class="swift-code">
       <dt>SWIFT / BIC:</dt>
-      <dd>{{companyDetails.swiftCode}}</dd>
+      <dd>{{companyData.swiftCode}}</dd>
     </dl>
 
     <dl class="founding">
       <dt>Gründung</dt>
-      <dd>{{companyDetails.founding}}</dd>
+      <dd>{{companyData.founding}}</dd>
     </dl>
 
     <dl class="email">
       <dt>E-Mail</dt>
-      <dd>{{companyDetails.email}}</dd>
+      <dd>{{companyData.email}}</dd>
     </dl>
 
     <button class="edit" (click)="editDetails()">EDIT</button>
