--- a/src/app/settings/company/company.html
+++ b/src/app/settings/company/company.html
@@ -64,10 +64,10 @@
   <form [formGroup]="companyForm" class="container-edit" (submit)="submit()" [ngClass]="showEdit ? 'show-scroll' : ''">
       
     <!-- Company Logo -->
-    <!-- <div class="form-group">
+    <div class="form-group">
       <label class="control-label" id="label-logo" for="logo">Firmenlogo:</label>
       <input class="form-control" type="file" id="logo" formControlName="logo" accept="image/*">
-    </div> -->
+    </div>
 
     <!-- Company Name -->
     <div class="form-group">
