input type file with cursor pointer

--- a/src/app/settings/company/company.scss
+++ b/src/app/settings/company/company.scss
@@ -76,6 +76,10 @@ dt {
   margin-bottom: 1.25rem;
 }
 
+input[type="file"] {
+  cursor: pointer;
+}
+
 .control-label {
   display: inline-block;
   margin: 0rem 0rem 0.5rem;
