companyLogo and companyName changed to name and logo

--- a/src/app/algorithmus/algorithmus.html
+++ b/src/app/algorithmus/algorithmus.html
@@ -172,7 +172,7 @@
   <div class="invoice-container" (click)="onEvent($event)">
     <header class="invoice-header">
         <div class="company-info">
-        <h1>{{companyControl.companyName}}</h1>
+        <h1>{{companyControl.name}}</h1>
         <p>{{companyControl.street}} {{companyControl.number}}<br>{{companyControl.postcode}} {{companyControl.city}} </p>
         </div>
         <a href="/" class="logo">
