--- a/src/app/settings/company/company.html
+++ b/src/app/settings/company/company.html
@@ -2,7 +2,7 @@
     <div class="container-firma">
       <div class="logo">
         <a href="/" class="logo">
-          <img width="170" height="40" [src]="companyData.companyLogo"  alt="Start in Krypto">
+          <img width="170" height="40" [src]="companyData.logo"  alt="Start in Krypto">
         </a>
       </div>
     <h1>Start in Krypto</h1>
@@ -12,7 +12,7 @@
     <address class="details">
       <dl>
         <dt>Name</dt>
-        <dd>{{companyData.companyName}}</dd>
+        <dd>{{companyData.name}}</dd>
       </dl>
       <dl>
         <dt>Name des Inhabers</dt>
