--- a/src/app/shared/invoice/invoice.html
+++ b/src/app/shared/invoice/invoice.html
@@ -1,7 +1,7 @@
 <section class="invoice-container">
     <header class="invoice-header">
         <div class="company-info">
-        <h1>{{companyControl.companyName}}</h1>
+        <h1>{{companyControl.name}}</h1>
         <p>{{companyControl.street}} {{companyControl.number}}<br>{{companyControl.postcode}} {{companyControl.city}} </p>
         </div>
         <a href="/" class="logo">
